// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardStatsWidget /> renders correctly 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw card-favourite"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`<CardStatsWidget /> renders correctly with favourite 1`] = `
<div
  className="card"
>
  <h4
    className="card-header"
  >
    jest
    <span
      className="float-right"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-star fa-fw card-favourite enabled"
        data-card-id={100}
        data-icon="star"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 576 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"
          fill="currentColor"
          style={{}}
        />
      </svg>
    </span>
  </h4>
  <div
    className="card-body"
  >
    <table
      className="table table-striped"
    >
      <thead
        className="thead-inverse"
      >
        <tr>
          <th
            colSpan={2}
          >
            Stats
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <th
            scope="row"
          >
            Health
          </th>
          <td>
            4
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Attack
          </th>
          <td>
            1
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Defence
          </th>
          <td>
            2
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Up Attack
          </th>
          <td>
            9
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Right Attack
          </th>
          <td>
            6
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Down Attack
          </th>
          <td>
            3
          </td>
        </tr>
        <tr>
          <th
            scope="row"
          >
            Left Attack
          </th>
          <td>
            5
          </td>
        </tr>
        <tr>
          <td
            colSpan={2}
          />
        </tr>
        <tr>
          <th
            scope="row"
          >
            Total Stats
          </th>
          <td>
            8
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
